[package]
name = "mock"
version = "0.1.0"
edition = "2021"
authors = ["xianyu <xianyu@iiisland.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ['http', 'axum'] }
worker-macros = { version = "0.6.0", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json", "query"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors"] }
